# fastbp

./: CMakeLists.txt  binary_element.h  binmat.txt  hadamard_code.h  large_hamming_h.txt  main.cpp  matrix_util.cpp  matrix_util.h  prob_utils.h  vector.h
